[tool.poetry]
name = "bot"

# Version managed externally in dit-meta.yaml. This version
# number must match Makefile.
version = "1.0.0"

description = "An operator bot for DamlChess."
authors = ["Digital Asset"]

[tool.poetry.dependencies]
python = "^3.7"
dazl = "^7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
