[tool.poetry]
name = "bot"

# Version managed externally in dit-meta.yaml. This version
# number must match Makefile.
version = "1.0.3"

description = "An operator bot for DamlChess."
authors = ["Digital Asset"]

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
dazl = "^7"
protobuf = "<=3.20"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
bot = "bot:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
